change formatting issues

--- a/project.ipynb
+++ b/project.ipynb
@@ -359,14 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "e566e077-9f32-4427-99ad-b6fe6f98f673",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbd5cfca2626496a9bcf1c4a5821412b",
+       "model_id": "894dde66b3524021962244b887ad7cb1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -383,7 +383,7 @@
     "    y = IntSlider(value=1978, min=1978, max=2017, step=5, description = \"Year\")\n",
     ")\n",
     "def plot_crabs_longlat(y):\n",
-    "    plt.figure(figsize=(12,12))\n",
+    "    plt.figure(figsize=(12,10))\n",
     "    plt.title(\"Alaskan Snow Crab Population Density Over Time\")\n",
     "    map = Basemap(projection='mill',\n",
     "            llcrnrlat = 54,\n",
@@ -394,8 +394,8 @@
     "    map.drawcoastlines()\n",
     "    map.drawmeridians(np.arange(-180.0, -160.0, 2.0), labels=[1,0,0,1])\n",
     "    map.drawparallels(np.arange(54.0, 66.0, 2.0), labels=[1,0,0,1])\n",
-    "    map.scatter(snow_crabs.loc[snow_crabs['year'] == y]['longitude'].values, \n",
-    "            snow_crabs.loc[snow_crabs['year'] == y]['latitude'].values,\n",
+    "    map.scatter(snow_crabs.loc[snow_crabs['year'] == y]['longitude'], \n",
+    "            snow_crabs.loc[snow_crabs['year'] == y]['latitude'],\n",
     "            s=snow_crabs.loc[snow_crabs['year'] == y]['cpue'] / 500,\n",
     "            latlon=True, alpha=0.8)"
    ]
@@ -450,14 +450,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "27b55aed-cfb6-4da5-af2d-5f8578baa05a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94721278daaa4c4087230a4d9f0905e6",
+       "model_id": "1c31fe8ca4dc42cfb6c6e0034c862c7c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -474,7 +474,7 @@
     "    y = IntSlider(value=1978, min=1978, max=2017, step=5, description = \"Year\")\n",
     ")\n",
     "def plot_crabs_longlat(y):\n",
-    "    plt.figure(figsize=(12,12))\n",
+    "    plt.figure(figsize=(12,10))\n",
     "    map = Basemap(projection='mill',\n",
     "            llcrnrlat = 54,\n",
     "            llcrnrlon = -180,\n",
@@ -484,8 +484,8 @@
     "    map.drawcoastlines()\n",
     "    map.drawmeridians(np.arange(-180.0, -160.0, 2.0), labels=[1,0,0,1])\n",
     "    map.drawparallels(np.arange(54.0, 66.0, 2.0), labels=[1,0,0,1])\n",
-    "    map.scatter(snow_crabs.loc[snow_crabs['year'] == y]['longitude'].values, \n",
-    "            snow_crabs.loc[snow_crabs['year'] == y]['latitude'].values,\n",
+    "    map.scatter(snow_crabs.loc[snow_crabs['year'] == y]['longitude'], \n",
+    "            snow_crabs.loc[snow_crabs['year'] == y]['latitude'],\n",
     "            s=snow_crabs.loc[snow_crabs['year'] == y]['cpue'] / 500,\n",
     "            latlon=True, c=snow_crabs.loc[snow_crabs['year'] == y]['bottom_temperature'], cmap='Blues_r',\n",
     "            alpha=0.8)\n",
@@ -613,29 +613,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "4388c6ca-c77b-43b1-884a-e2778cb569b4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([33262.50368508])"
+       "array([29753.20610354])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fit.predict([[62, -170.8, 1988, 84, 7.3, 10, 123.8]])"
+    "fit.predict([[58, -170.8, 1988, 84, 7.3, 4, 123.8]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d35dd97e-386e-4243-afa9-27d40ce040a3",
+   "id": "7268ff0d-1c58-48ce-b005-03a46289d446",
    "metadata": {},
    "outputs": [],
    "source": []
